tree-sitter/test/corpus/variables.txt
==================
Variable declaration
==================

let name: Str = "John"
mut age: Int = 25
let is_something = false
mut negative = -1

---

(program
  (statement
    (variable_definition
      binding: (variable_binding)
      name: (identifier)
      type: (type
        (primitive_type
          (str)))
      (assign)
      value: (expression
        (primitive_value
          primitive: (string
            chunk: (string_content))))))
  (statement
    (variable_definition
      binding: (variable_binding)
      name: (identifier)
      type: (type
        (primitive_type
          (int)))
      (assign)
      value: (expression
        (primitive_value
          primitive: (number)))))
  (statement
    (variable_definition
      binding: (variable_binding)
      name: (identifier)
      (assign)
      value: (expression
        (primitive_value
          primitive: (boolean)))))
  (statement
    (variable_definition
      binding: (variable_binding)
      name: (identifier)
      (assign)
      value: (expression
        (unary_expression
          operator: (minus)
          operand: (expression
            (primitive_value
              primitive: (number))))))))
